# HelloWorld

./: .gitignore  Makefile  README.md  asort.cpp  checkasending.cpp  checkdesending.cpp  checkduplicate.cpp  isasending.cpp  isdesending.cpp  maxLenRepeatedStr.cpp  prioque.cpp  random.cpp  search.cpp  sign.cpp  sort.cpp  strings.cpp  test  test.cpp  tester.cpp  txt  txtextract.cpp  txtextractor.cpp
Parallel/src/: parallel.cpp  parallel.h  progressreporter.cpp  progressreporter.h  stats.cpp  stats.h  stringprint.h
algorithms/: CMakeLists.txt  Logger.h  Makefile  algorithms.h  array.cpp  arrays.cpp  binTree.cpp  binTrees.cpp  bitrees.cpp  bits.cpp  bits.h  bst.h  challenges.cpp  combination.cpp  comments.func  dataSource.h  dp.cpp  geometry.cpp  graph.cpp  hashs.cpp  ipresolver.cpp  isduplicate.cpp  license  list.cpp  list.h  maxLenRepeatedStr.cpp  mem.cpp  misc.cpp  number.cpp  prioque.cpp  queens.cpp  random.cpp  recursion.cpp  search.cpp  search.h  shortestpath.cpp  sign.cpp  sort.cpp  sort.h  squash.cpp  (+7 more)
algorithms/common/: Logger.h  profiler.cpp  profiler.h
algorithms/dat/: dat.tar  english
algorithms/include/: tree.h
algorithms/test/: dataSourceTester.cpp  miscTester.cpp  subsetTester.cpp  utils.h
graphics/shadowMapping/: build.sh  camera.h  shader.h  shaderManager.cpp  shaderManager.h  shadow_mapping.cpp  shape.cpp
graphics/shadowMapping/shaders/: shadow_mapping.frag  shadow_mapping.vs
markov/hmm/: Logger.cpp  Makefile  hmm.cpp  hmm.h  run.sh  train.cpp
markov/textgen/: Logger.h  Logger.hpp  RandomTextGenerator.cpp  RandomTextGenerator.h  makefile
markov/textgen/common/: Logger.h
markov/textgen/test/: RandomTextGeneratorTester.cpp
misc/: myprint.py  smallpt.cpp  test.txt
misc/GraphViz/: README
misc/GraphViz/src/: SimpleGraph.cpp  SimpleGraph.h  main.cpp
misc/Path-Tracer/: CMakeLists.txt  README.md
misc/Path-Tracer/src/: aabbox.h  camera.cpp  camera.h  geometry.h  kdtree.cpp  kdtree.h  kdtreeaccel.cpp  kdtreeaccel.h  main.cpp  material.cpp  material.h  mathUtility.h  objects.cpp  objects.h  parallel.cpp  parallel.h  pathtracer.h  progressreporter.cpp  progressreporter.h  ray.h  renderer.cpp  renderer.h  rng.h  scene.cpp  scene.h  stats.cpp  stats.h  stringprint.h  texture.cpp  texture.h  triangle.h  vector.h
misc/Path-Tracer/src/sampler/: sampler.cpp  sampler.h  sampling.cpp  sampling.h  stratified.cpp  stratified.h
misc/cityFinder/: cityfinder.cpp
misc/huffman/: BitInputStream.cpp  BitOutputStream.cpp  CMakeLists.txt  HuffmanNode.cpp  HuffmanNode.hpp  HuffmanTree.cpp  HuffmanTree.hpp  Makefile  utils.cpp
misc/huffman/dat/: justA
misc/huffman/include/: BitInputStream.hpp  HuffmanTree.hpp  utils.hpp
misc/huffman/test/: compress.cpp  uncompress.cpp
misc/kdtree/: KDTree.h  MyBoundedPQ.h  build.sh  test-harness.cpp
misc/kdtree/map-lookup/: Makefile  main.cpp  mainwindow.cpp  map-lookup
misc/mandelbrot/: Makefile  README  mandelbrot  renderthread.cpp  renderthread.h
misc/monte-carlo/: Makefile  comment.tmp  macbeth-color-generator.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mcbeth.ppm  renderthread.cpp  renderthread.h  test  test.pro
misc/qgraphviz/: Makefile  QGraphviz.pro  license
misc/qgraphviz/QGraphviz/: Makefile  QGVEdge.cpp  QGVEdge.h  QGVNode.cpp  QGVNode.h  QGVScene.cpp  QGVScene.h  QGVSubGraph.cpp  QGVSubGraph.h  QGraphviz.pro  qgv.h  utils.pri
misc/qgraphviz/QGraphviz/utils/: QGVCore.cpp  QGVCore.h
misc/qgraphviz/example/: MainWindow.cpp  MainWindow.h  Makefile  QGraphicsViewEc.cpp  QGraphicsViewEc.h  example.pro  main.cpp
misc/ray-tracer/: .gitignore  CMakeLists.txt
misc/ray-tracer/cmd/: AAScene.cpp  AAScene.h  render.cpp
misc/ray-tracer/include/: FishEye.h  Sampler.h  ViewPlane.h  World.h
misc/ray-tracer/src/: CMakeLists.txt
misc/ray-tracer/src/Cameras/: FishEye.cpp  FishEye.h  Pinhole.cpp  ThinLens.cpp  ThinLens.h
misc/ray-tracer/src/Materials/: Matte.cpp
misc/ray-tracer/src/Samplers/: Sampler.cpp  Sampler.h
misc/ray-tracer/src/Utilities/: RGBColor.cpp
misc/ray-tracer/src/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
misc/sharedlibdemo/: a.cpp  b.cpp  build.sh  interface.h  run.sh  test.cpp
ml/decisiontree/: DataReader.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeTester  IndexOutOfBound.cpp  IndexOutOfBound.h  Logger.h  Node.cpp  Node.h  Samples.h  StringDataReader.cpp  StringDataReader.h  Timing.cpp  Timing.h  Utils.h  makefile
ml/decisiontree/test/: DecisionTreeTester  DecisionTreeTester.cpp
ml/kmeans/: DataReader.h~  FloatDataReader.cpp  FloatDataReader.h  IndexOutOfBound.cpp  IndexOutOfBound.h  OfflineKMeans.cpp  OfflineKMeans.h  Samples.cpp  Samples.h  data.tar  makefile~
ml/kmeans/test/: OfflineKMeansTester.cpp
ml/knn/: InputDataSet.cpp  InputDataSet.h  KNearestNeighbours.cpp  KNearestNeighbours.h  Logger.h  NMinHeap.h  makefile  testDigits.tar  trainingDigits.tar
ml/knn/test/: KNearestNeighboursTester.cpp
ml/naivebayes/: FileTokenizer.cpp  FileTokenizer.h  IndexOutOfBound.h  InputDataSet.cpp  InputDataSet.h  OfflineNaiveBayesClassifier.cpp  OfflineNaiveBayesClassifier.h  data.tar  makefile
ml/naivebayes/test/: OfflineNBCTester.cpp
python/: .gitignore
python/L0smooth/: L0_Smooth.py
python/imageQuilting/: PatchBasedSynthesis.py  imageQuilting.py
python/pencilDrawing/: genStroke.py  genTone.py  test.py
python/subdivTriangle/: platform_open.py  polyhedra.py  sphere.ctm  subdiv_sphere.py
